--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,11 @@ edition = "2021"
 
 [dependencies]
 cxx = "1.0"
+tokio = { version = "1", features = ["full"] }
+poem = "1.3"
+indoc = "1.0"
+tokio-stream = "0.1.8"
+futures = "0.3"
 
 [build-dependencies]
 cxx-build = "1.0"
