--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,9 @@ tokio = { version = "1", features = ["full"] }
 poem = "1.3"
 indoc = "1.0"
 tokio-stream = "0.1.8"
+tokio-util = "0.7.0"
 futures = "0.3"
+async-compression = { version = "0.3.12", features = ["tokio", "zstd"] }
 
 [build-dependencies]
 cxx-build = "1.0"
