--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-cxx = "1.0"
+cxx = { version = "1.0", features = ["std"] }
 tokio = { version = "1", features = ["full"] }
-poem = "1.3"
+poem = { version = "1.3", features = [] }
 indoc = "1.0"
 tokio-stream = "0.1.8"
 tokio-util = "0.7.0"
