allow configuring listen address

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ tokio-stream = "0.1.8"
 tokio-util = "0.7.0"
 futures = "0.3"
 async-compression = { version = "0.3.12", features = ["tokio", "zstd"] }
+argh = "0.1.7"
 
 [build-dependencies]
 cxx-build = "1.0"
