--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 cxx = { version = "1.0", features = ["std"] }
 tokio = { version = "1", features = ["full"] }
-poem = { version = "1.3", features = [] }
+poem = { version = "1.3", features = ["compression"] }
 indoc = "1.0"
 tokio-stream = "0.1.8"
 tokio-util = "0.7.0"
