--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,15 +4,15 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-cxx = { version = "1.0", features = ["std"] }
+cxx = { version = "1", features = ["std"] }
 tokio = { version = "1", features = ["full"] }
-poem = { version = "1.3", features = ["compression"] }
-indoc = "1.0"
-tokio-stream = "0.1.8"
-tokio-util = "0.7.0"
-futures = "0.3"
-async-compression = { version = "0.3.12", features = ["tokio", "zstd"] }
-argh = "0.1.7"
+poem = { version = "1", features = ["compression"] }
+indoc = "1"
+tokio-stream = "*"
+tokio-util = "*"
+futures = "*"
+async-compression = { version = "*", features = ["tokio", "zstd"] }
+argh = "*"
 
 [build-dependencies]
-cxx-build = "1.0"
+cxx-build = "1"
